--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h1>About page</h1>
+<div class="container-fluid">
+    <h1>About page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati hic natus tempora earum nulla dicta sed dolorum animi sapiente harum. Quidem omnis aliquid quas nisi quam quod tenetur culpa ad.</p>
+</div>
