--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome to our home page</h1>
+<div class="home-callout text-center container-fluid">
+    <h1>Welcome to our home page</h1>
+    <h3>Slogan for this website!</h3>
+</div>
+
